SDRTrunk 0.5/0.6 Argument Updates